--- a/style.css
+++ b/style.css
@@ -48,5 +48,5 @@ button{
     border: none;
     border-radius: 10px;
     cursor: pointer;
-    box-shadow: 1%;
+    box-shadow: 0px 0px 5px  rgba(255, 191, 0, 0.87);
 }
