--- a/style.css
+++ b/style.css
@@ -2,11 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Rowdies", sans-serif;
 }
 
 body {
-      background-color: rgb(0, 0, 0);
+      background-color: rgba(0, 0, 0, 0.967);
       width: 100%;
+
 }
 
 .titlebox{
@@ -37,7 +39,7 @@ body {
     gap: .9em;
 }
 button{
-    font-family: "Rowdies", sans-serif;
+    
     font-weight: 700;
     font-style: normal;
     font-size: 0.7em;
@@ -48,5 +50,81 @@ button{
     border: none;
     border-radius: 10px;
     cursor: pointer;
-    box-shadow: 0px 0px 5px  rgba(255, 191, 0, 0.87);
+    box-shadow: 0px 0px 10px orange;
+}
+
+.cards{
+    background-color: white;
+    display: flex;
+    gap: 1em;
+    padding: 20px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.card {
+    background-position: center;
+    background-size: cover;
+    color: rgb(248, 244, 28);
+    font-weight: bold;
+    background-color: white;
+    border: solid 5px rgb(0, 0, 0);
+    box-shadow: 0 0 10px rgb(71, 71, 4);
+    width: 300px;
+    height: 200px;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    background-image: url('./imagens/moonknight.jpg');
+    align-items: end;
+}
+
+.texto{
+    background-color: black;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 50px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.scifi{
+    background-position: center;
+    background-size: cover;
+    color: rgb(248, 244, 28);
+    font-weight: bold;
+    background-color: white;
+    border: solid 5px rgb(0, 0, 0);
+    box-shadow: 0 0 10px rgb(71, 71, 4);
+    width: 300px;
+    height: 200px;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    background-image: url('./imagens/doctorwho.jpg');
+    align-items: end;
+}
+
+.animation{
+    background-position: center;
+    background-size: cover;
+    color: rgb(248, 244, 28);
+    font-weight: bold;
+    background-color: white;
+    border: solid 5px rgb(0, 0, 0);
+    box-shadow: 0 0 10px rgb(71, 71, 4);
+    width: 300px;
+    height: 200px;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    background-image: url('./imagens/arcane.jpg');
+    align-items: end;
+}
+
+.drama {
+    background-image: url('./imagens/greysanatomy.jpg');
 }
