--- a/style.css
+++ b/style.css
@@ -54,10 +54,10 @@ button{
 }
 
 .cards{
-    background-color: white;
+    background-color: rgb(0, 0, 0);
     display: flex;
-    gap: 1em;
-    padding: 20px;
+    gap: 50px;
+    padding: 40px;
     flex-wrap: wrap;
     justify-content: center;
 }
@@ -77,6 +77,7 @@ button{
     justify-content: center;
     background-image: url('./imagens/moonknight.jpg');
     align-items: end;
+    cursor: pointer;
 }
 
 .texto{
@@ -92,39 +93,21 @@ button{
 }
 
 .scifi{
-    background-position: center;
-    background-size: cover;
-    color: rgb(248, 244, 28);
-    font-weight: bold;
-    background-color: white;
-    border: solid 5px rgb(0, 0, 0);
-    box-shadow: 0 0 10px rgb(71, 71, 4);
-    width: 300px;
-    height: 200px;
-    border-radius: 20px;
-    display: flex;
-    justify-content: center;
     background-image: url('./imagens/doctorwho.jpg');
-    align-items: end;
 }
 
 .animation{
-    background-position: center;
-    background-size: cover;
-    color: rgb(248, 244, 28);
-    font-weight: bold;
-    background-color: white;
-    border: solid 5px rgb(0, 0, 0);
-    box-shadow: 0 0 10px rgb(71, 71, 4);
-    width: 300px;
-    height: 200px;
-    border-radius: 20px;
-    display: flex;
-    justify-content: center;
     background-image: url('./imagens/arcane.jpg');
-    align-items: end;
 }
 
 .drama {
     background-image: url('./imagens/greysanatomy.jpg');
+}
+
+.kids {
+    background-image: url('imagens/miraculous.jpg');
+}
+
+.anime {
+    background-image: url('imagens/haikyuu.jpg');
 }
