--- a/style.css
+++ b/style.css
@@ -67,9 +67,9 @@ button{
     background-size: cover;
     color: rgb(248, 244, 28);
     font-weight: bold;
-    background-color: white;
+    background-color: rgb(0, 0, 0);
     border: solid 5px rgb(0, 0, 0);
-    box-shadow: 0 0 10px rgb(71, 71, 4);
+    box-shadow: 0 0 10px rgb(194, 194, 45);
     width: 300px;
     height: 200px;
     border-radius: 20px;
@@ -101,7 +101,7 @@ button{
 }
 
 .drama {
-    background-image: url('./imagens/greysanatomy.jpg');
+    background-image: url('imagens/greysanatomy.jpg');
 }
 
 .kids {
@@ -110,4 +110,16 @@ button{
 
 .anime {
     background-image: url('imagens/haikyuu.jpg');
+}
+
+.comedy {
+    background-image: url('imagens/brooklyn99.jpg'); 
+}
+
+.suspense {
+      background-image: url('imagens/blackmirror.jpg');
+}
+
+.fantasy {
+    background-image: url('imagens/percyjackson.jpg');
 }
